Changed overflow to auto for page-content. Wrapped whole app in container-fluid to better work with rows and center contents. Removed login page from routes since it no longer will be used. Protected route will now always return WelcomePage component when no user provided

--- a/frontend/sass/_index.scss
+++ b/frontend/sass/_index.scss
@@ -15,7 +15,7 @@
   padding: 20px;
   flex: 1;
   display: flex;
-  overflow: scroll;
+  overflow: auto;
   margin-top: 85px;
   margin-bottom: 80px;
 }
